# hdfs-operator

./: .pre-commit-config.yaml  Cargo.toml  Makefile
.github/workflows/: build.yml
docs/: antora.yml
docs/modules/ROOT/pages/: index.adoc
docs/modules/getting_started/examples/code/: hdfs.yaml
docs/modules/getting_started/pages/: installation.adoc
rust/crd/: Cargo.toml
rust/crd/src/: lib.rs
rust/operator/: Cargo.toml
rust/operator-binary/: Cargo.toml
rust/operator-binary/src/: stackable-hdfs-operator.rs
rust/operator/src/: discovery.rs  event.rs  hdfs_controller.rs  lib.rs  product_logging.rs
rust/operator/src/webhook/: mod.rs  webhook.rs  webhook_cert_manager.rs
tests/: test-definition.yaml
