[package]
authors = ["Stackable GmbH info@stackable.de"]
description = "Stackable Operator for Apache HDFS - The Operator Library"
edition = "2021"
license = "OSL-3.0"
name = "stackable-hdfs-operator"
repository = "https://github.com/stackabletech/hdfs-operator"
version = "0.7.0-nightly"
publish = false

[dependencies]
axum = "0.5.17"
hyper = "0.14.23"
stackable-operator = { git = "https://github.com/stackabletech/operator-rs.git", tag = "0.30.2" }
stackable-hdfs-crd = { path = "../crd" }
tokio-rustls = "0.23.4"
openssl = "0.10.42"
rustls-pemfile = "1.0.1"
base64 = "0.13.1"
tokio-stream = { version = "0.1.11", features = ["sync"] }
time = { version = "0.3.17", features = ["formatting"] }
futures = "0.3"
indoc = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
snafu = "0.7"
strum = "0.24"
tokio = { version = "1.23", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-futures = { version = "0.2", features = ["futures-03"] }
